--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,14 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "@google-cloud/storage": "^1.4.0",
+    "child-process-promise": "^2.2.1",
+    "cors": "^2.8.4",
     "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.2"
+    "firebase-functions": "^0.6.2",
+    "fs": "0.0.1-security",
+    "os": "^0.1.1",
+    "path": "^0.12.7"
   },
   "private": true
 }
